@@ -4,6 +4,10 @@ Changelog
 3.0b4 - Unreleased
 ------------------
 
+- Use the standard libraries doctest module, instead of the deprecated one
+  from zope.testing.
+  [hannosch]
+
 - Marked the session cookie as ``HTTPOnly``.
   [hannosch]
 
